fix alignment of externalities by mode using extra table level

--- a/scripts/report/generation/stylesheets/report.css
+++ b/scripts/report/generation/stylesheets/report.css
@@ -66,8 +66,8 @@ table.bar-chart tr {
 table.bar-chart td {
 
     text-align: center;
-    line-height: 30px;
-    height: 30px;
+    line-height: 44px;
+    height: 44px;
 
 }
 
